--- a/style.css
+++ b/style.css
@@ -440,8 +440,6 @@ body {
 
 /* Partner oldal dropdownokkal */
 
-.editable {}
-
 .edit-partner-data {
     border: none;
     outline: none;
@@ -449,27 +447,142 @@ body {
     margin: 5px 0 5px auto;
     width: 100%;
     padding: 3px;
+    color: rgba(255, 254, 254, .5);
+
 }
 
 select {
+    /* background-position-x: 100%;
+    background-position-y: 5px; */
     -webkit-appearance: none;
     -moz-appearance: none;
     appearance: none;
     background: transparent;
     background-image: url("./files/arrow.svg");
     background-repeat: no-repeat;
-    /* background-position-x: 100%;
-    background-position-y: 5px; */
     background-position: calc(100% - 0.6rem) center !important;
     padding-right: 2rem !important;
     cursor: pointer;
     color: rgba(255, 254, 254, .5);
     background-color: rgba(217, 217, 217, 0.1);
-
 }
 
-.editor-container{
+option {
+    color: black;
+}
+
+.editor-container {
     width: 40%;
     margin-left: auto;
 }
 
+.set-partner-name{
+    border: none;
+    outline: none;
+    background-color: rgba(217, 217, 217, 0.1);
+    margin: 1vh 0;
+    width: 100%;
+    padding: 10px 12px;
+    width: 40%;
+    font-size: 14pt;
+    color: rgba(255, 254, 254, .5);
+    border-radius: 10px;
+}
+
+.set-partner-name::placeholder {
+    color: rgba(255, 254, 254, .5);
+    font-size: 14pt;
+}
+
+.editable .partner-name{
+    padding: 0;
+}
+
+.add-partner-mobile{
+    border-radius: 10px;
+    background: rgba(217, 217, 217, 0.1);
+    color: rgba(255, 254, 254, 1);
+    padding: 1.5vh 2vw;
+    border: none;
+    outline: none;
+    width: 50%;
+    margin: 0 auto;
+    font-size: 14pt;
+    margin-top: 5vh;
+    cursor: pointer;
+    display: none;
+}
+
+
+
+/* Responsive rész */
+
+@media (max-width: 575.98px) { 
+    /* Popup ablakok */
+    .popup-window{
+        width: 80%;
+    }
+    .popup-window-btn{
+        width: 70%;
+    }
+    /* Dashboard */
+    .dashboard{
+        width: 85%;
+    }
+    .logo-bar{
+        display: flex;
+        flex-direction: row;
+    }
+    .searchbar{
+        margin-bottom: 3vh !important;
+        margin-top: 3vh;
+    }
+    .searchbar input{
+        width: 70% !important;
+        padding: 1vh 5vw !important;
+    }
+    .searchbar button{
+        width: 12%;
+    }
+    /* sk logo */
+    .logo:nth-child(1){
+        visibility: hidden;
+        display: none;
+        position: absolute;
+    }
+    /* menü ikon */
+    .logo:nth-child(2){
+        margin: 0 auto 0 2vw !important;
+        width: 30px;
+        padding-top: 3vh !important;
+    }
+    /* message ikon */
+    .logo-message{
+        margin: 0 2vw 0 auto !important;
+        width: 30px;
+        padding-top: 3vh !important;
+    }
+    .column{
+        width: 45% !important;
+    }
+    .column:nth-child(2){
+        visibility: hidden;
+        display: none;
+        width: 0% !important;
+    }
+    .add-partner-mobile{
+        display: block;
+    }
+}
+
+@media (max-width: 767.98px) { 
+
+}
+
+@media (max-width: 991.98px) { 
+
+}
+
+@media (max-width: 1199.98px) { 
+
+}
